Added explanation to solving linear equations.

--- a/workshop_2/scientific_python.ipynb
+++ b/workshop_2/scientific_python.ipynb
@@ -1585,10 +1585,22 @@
      "source": [
       "## Matrix Solvers\n",
       "You can solve systems of linear equations using the **solve** command:\n",
-      "    \n",
+      "Solving \n",
+      "\\begin{equation}\n",
+      " x_1 + x_2 + x_3 =6\n",
+      "\\end{equation}\n",
+      "\\begin{equation}\n",
+      "2x_2 + 5x_3 = -4\n",
+      "\\end{equation}\n",
+      "\\begin{equation}\n",
+      "2x_1 + 5x_2 -x_3 = 27\n",
+      "\\end{equation}\n",
+      "Where $x = [x_1, x_2, x_3]$\n",
+      "\n",
       "    A = np.array([[1, 1, 1], [0, 2, 5], [2, 5, -1]])\n",
       "    b = np.array([6, -4, 27])\n",
-      "    np.linalg.solve(A, b)"
+      "    x = np.linalg.solve(A, b)\n",
+      "    print(x)"
      ]
     },
     {
