Additions to workshop 2 exercises and small mod to main body of workshop 2

--- a/workshop_2/scientific_python.ipynb
+++ b/workshop_2/scientific_python.ipynb
@@ -1179,7 +1179,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "There are many more things you can do with Matplotlib. We'll be looking at some of them in the sections to come. In the meantime, if you want an idea of the different things you can do, look at the Matplotlib [Gallery](http://matplotlib.org/gallery.html). Rob Johansson's IPython notebook [Introduction to Matplotlib](http://nbviewer.ipython.org/urls/raw.github.com/jrjohansson/scientific-python-lectures/master/Lecture-4-Matplotlib.ipynb) is also particularly good."
+      "There are many more things you can do with Matplotlib. If you want an idea of the different things you can do, look at the Matplotlib [Gallery](http://matplotlib.org/gallery.html). Rob Johansson's IPython notebook [Introduction to Matplotlib](http://nbviewer.ipython.org/urls/raw.github.com/jrjohansson/scientific-python-lectures/master/Lecture-4-Matplotlib.ipynb) is also particularly good."
      ]
     },
     {
@@ -1363,6 +1363,24 @@
       "as well as a **ones** command.\n",
       "\n",
       "    np.ones([3, 1])"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "We can access elements of arrays the same way we do lists:\n",
+      "    \n",
+      "    v=array([0,1,2,3])\n",
+      "    v[1]"
      ]
     },
     {
@@ -1576,8 +1594,37 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "We'll find this useful later on."
+      "The elements of two dimensional arrays i.e. matrices are accessed liked lists of lists. The first index specifies the row:\n",
+      "    \n",
+      "    m = np.array([[1, 2], [3, 4]], 'd')\n",
+      "    m[0]"
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "And the second index specifies the element inside the row:\n",
+      "    \n",
+      "    m = np.array([[1, 2], [3, 4]], 'd')\n",
+      "    m[0][1]"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -1728,7 +1775,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "## List Comprehensions and Generators\n",
+      "## Extras: Idiomatic Python - List Comprehensions and Generators\n",
       "List comprehensions are a streamlined way to make lists. They look something like a list definition, with some logic thrown in. For example:\n",
       "\n",
       "    evens1 = [2*i for i in range(10)]\n",
