--- a/workshop_2/scientific_python_exercises.ipynb
+++ b/workshop_2/scientific_python_exercises.ipynb
@@ -101,6 +101,24 @@
      "outputs": []
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "We're going to use numpy as some of the plotting facilities:\n",
+      "\n",
+      "    import numpy as np\n",
+      "    %pylab inline"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
      "cell_type": "heading",
      "level": 1,
      "metadata": {},
@@ -250,7 +268,7 @@
       "\n",
       "Given a string, file_name, that corresponds to a txt file in the notebooks directory print out the contents of that file. (As your function is printing rather than returning the file contents the docstring lists None as the return value)\n",
       "\n",
-      "<span style=\"text-decoration:underline\" title=\"How do you open file and read its contents?\n",
+      "<span style=\"text-decoration:underline\" title=\"How do you open file and read its contents to a string?\n",
       "Remember to close the file!\">Hints</span>"
      ]
     },
@@ -279,7 +297,7 @@
       "\n",
       "Given a list of integers return another list containing the squared elements of the original list\n",
       "\n",
-      "<span style=\"text-decoration:underline\" title=\"- You'll need to create an empty list which will contain the squared elements and use the .append() method to add elements to it. \n",
+      "<span style=\"text-decoration:underline\" title=\"- Remember you can create an empty list and add to it with the .append() method. \n",
       "- A 'for' loop should help you go through the original list\">Hints</span>"
      ]
     },
@@ -295,7 +313,7 @@
       "    [1,9,25]\n",
       "    >>> square_list([-1,-2,-3])\n",
       "    [1,4,9]\n",
-      "    '''\n"
+      "    '''"
      ],
      "language": "python",
      "metadata": {},
@@ -308,9 +326,14 @@
       "7.3: write_squares(list_ints, file_name)\n",
       "----------------------\n",
       "\n",
-      "Given a list of integers write the squares of the integers in the list to a file given by file_name \n",
+      "Given a list of integers list_ints and a string file_name corresponding to a file in the local directory, write the squares of the integers follow by a space to the file.\n",
       "\n",
-      "<span style=\"text-decoration:underline\" title=\"How do you access elements of a list.\">Hints</span>"
+      "If list_ints was [1,2,3,4,5] opening the file produced should show you:\n",
+      "\n",
+      "1 4 9 16 25\n",
+      "\n",
+      "<span style=\"text-decoration:underline\" title=\" -You'll need to create a string containing the squared digits then write it to the file.\n",
+      "- Remember to close the file!\">Hints</span>"
      ]
     },
     {
@@ -436,9 +459,11 @@
      "metadata": {},
      "source": [
       "8.3: checkboard()\n",
-      "==============\n",
+      "=================\n",
       "\n",
-      "Create a 4x4 numpy matrix with a checkboard pattern of alternating ones and zeros"
+      "Create a 4x4 numpy matrix with a checkboard pattern of alternating ones and zeros\n",
+      "\n",
+      "<span style=\"text-decoration:underline\" title=\"You can create a starting matrix full of zeros with the np.zeros() function, and then access it like a list of lists\">Hints</span>"
      ]
     },
     {
@@ -447,8 +472,11 @@
      "input": [
       "def checkboard():\n",
       "    '''\n",
-      "    >>> null_vector(1)\n",
-      "    array([ 0.])\n",
+      "    >>> checkboard()\n",
+      "    array([[ 0.,  1.,  0.,  1.],\n",
+      "       [ 1.,  0.,  1.,  0.],\n",
+      "       [ 0.,  1.,  0.,  1.],\n",
+      "       [ 1.,  0.,  1.,  0.]])\n",
       "    '''"
      ],
      "language": "python",
@@ -456,13 +484,117 @@
      "outputs": []
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "8.4: matrix_from_lists(list_1, list_2, list_3)\n",
+      "=================\n",
+      "\n",
+      "From a 3 lists of numbers return a numpy matrix where list_1, list_2 and list_3 are row vectors of the matrix.\n",
+      "\n",
+      "<span style=\"text-decoration:underline\" title=\"- The np.array() functions turns a list into a vector and a list of lists into a matrix\">Hints</span>"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "8.4: solve(a,b)\n",
-      "==============\n",
+      "def matrix_from_lists(a,b,c):\n",
+      "    '''\n",
+      "    >>>matrix_from_lists([0,1],[0,1],[0,1])\n",
+      "    array([[0, 1],[0, 1],[0, 1]])\n",
+      "    >>>matrix_from_lists([0,1],[0,1]])\n",
+      "    array([[0, 1],[0, 1]])\n",
+      "    >>>matrix_from_lists([0,0,0],[1,1,1],[2,2,2])\n",
+      "    array([[0, 0, 0],[1, 1, 1],[2, 2, 2]])\n",
+      "    '''"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "9.1: gen_poly(x, a ,b, c)\n",
+      "===============\n",
       "\n",
-      "Given two linear equations defined by parameters use numpy to solve the equations."
+      "Given an array of numbers x and parameters, a, b and c return a new array containing ax^2 + bx + c\n",
+      "\n",
+      "<span style=\"text-decoration:underline\" title=\"\n",
+      "- You don't need to loop through the individual elements\n",
+      "- Arrays can be multiplied, divided, added and subtracted to directly.\">Hints</span>"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "gen_poly(x, a, b, c):\n",
+      "    '''\n",
+      "    >>>gen_poly(np.linspace(1,10,10), 1, 1, 0)\n",
+      "    array([   2.,    6.,   12.,   20.,   30.,   42.,   56.,   72.,   90.,  110.])\n",
+      "    >>>gen_poly(np.linspace(1,10,10), 2, 1, 0)\n",
+      "    array([   3.,   10.,   21.,   36.,   55.,   78.,  105.,  136.,  171.,  210.])\n",
+      "    >>>gen_poly(np.linspace(0,1,5), 1, 5, 5)\n",
+      "    array([  5.    ,   6.3125,   7.75  ,   9.3125,  11.    ])\n",
+      "    '''"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "9.2: fit_poly(x,y)\n",
+      "===========\n",
+      "\n",
+      "Given an array of initial data x, and transformed data y, find the parameters that fit a 2d polynomial to y(x).\n",
+      "\n",
+      "We haven't covered this in the workshop but there is a numpy function that does just what we want, take a look at [polyfit](http://docs.scipy.org/doc/numpy/reference/generated/numpy.polyfit.html). There are quite a lot of different arguments that polyfit function can take but you will only need to use the first three.\n",
+      "\n",
+      "<span style=\"text-decoration:underline\" title=\"\n",
+      "- - Remember here we've imported numpy as 'np' not 'numpy'\">Hints</span>"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def fit_poly(x,y):\n",
+      "    '''\n",
+      "    >>>fit_poly( np.linspace(1,10,10), gen_poly(np.linspace(1,10,10), 1, 1, 0) )\n",
+      "    array([ 1.,  1.,  0.])\n",
+      "    >>>fit_poly( np.linspace(1,10,10), gen_poly(np.linspace(1,10,10), 2, 1, 0) )\n",
+      "    array([ 2.,  1.,  0.])\n",
+      "    >>>fit_poly( np.linspace(1,10,10), gen_poly(np.linspace(1,10,10), 3, 1, 1) )\n",
+      "    array([ 3.,  1.,  1.])\n",
+      "    '''"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "9.3: plot_data(x,y)\n",
+      "==================\n",
+      "\n",
+      "Given"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def plot_data(x,y):\n",
+      "    '''\n",
+      "    '''"
      ],
      "language": "python",
      "metadata": {},
