--- a/workshop_2/scientific_python_exercises.ipynb
+++ b/workshop_2/scientific_python_exercises.ipynb
@@ -582,19 +582,41 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "9.3: plot_data(x,y)\n",
+      "9.3: plot_data(x, a, b, c)\n",
       "==================\n",
       "\n",
-      "Given"
+      "Given an array of numbers x, and parameters a,b and c plot the function f(x) against x where f(x) = ax^2 + bx + c\n",
+      "\n",
+      "An example image is: <img src=files/poly.png height=400 width=400></img>"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "def plot_data(x,y):\n",
+      "def plot_data(x,a,b,c):\n",
       "    '''\n",
+      "    >>> plot_data(np.linspace(1,10,100), 1, 1, 0)\n",
+      "    None\n",
       "    '''"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "9.4: multi_plot_data(x, a,b,c)\n",
+      "==============================\n",
+      "\n",
+      "Given an array of numbers x and parameters a,b,c. \n",
+      "\n",
+      "Generate data corresponding to f(x) = ax^2 + bx + c. \n",
+      "Add some random noise to the resulting data using noise = np.random.normal\n",
+      "Fit a polynomial to the noisy data.\n",
+      "Generate new data with the fitted polynomial and plot it.\n"
      ],
      "language": "python",
      "metadata": {},
