--- a/workshop_2/scientific_python_exercises.ipynb
+++ b/workshop_2/scientific_python_exercises.ipynb
@@ -552,7 +552,7 @@
       "9.2: fit_poly(x,y)\n",
       "===========\n",
       "\n",
-      "Given an array of initial data x, and transformed data y, find the parameters that fit a 2d polynomial to y(x).\n",
+      "Given an array of initial data x, and transformed data y, return the parameters that fit a 2d polynomial to y(x).\n",
       "\n",
       "We haven't covered this in the workshop but there is a numpy function that does just what we want, take a look at [polyfit](http://docs.scipy.org/doc/numpy/reference/generated/numpy.polyfit.html). There are quite a lot of different arguments that polyfit function can take but you will only need to use the first three.\n",
       "\n",
@@ -587,7 +587,10 @@
       "\n",
       "Given an array of numbers x, and parameters a,b and c plot the function f(x) against x where f(x) = ax^2 + bx + c\n",
       "\n",
-      "An example image is: <img src=files/poly.png height=400 width=400></img>"
+      "An example image is: <img src=files/poly.png height=400 width=400></img>\n",
+      "\n",
+      "<span style=\"text-decoration:underline\" title=\"\n",
+      "- Check the plotting function we used in the workshop\">Hints</span>"
      ]
     },
     {
@@ -605,10 +608,10 @@
      "outputs": []
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "9.4: multi_plot_data(x, a,b,c)\n",
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "9.4: multi_plot_data(x, a, b, c)\n",
       "==============================\n",
       "\n",
       "Given an array of numbers x and parameters a,b,c. \n",
@@ -616,7 +619,22 @@
       "Generate data corresponding to f(x) = ax^2 + bx + c. \n",
       "Add some random noise to the resulting data using noise = np.random.normal\n",
       "Fit a polynomial to the noisy data.\n",
-      "Generate new data with the fitted polynomial and plot it.\n"
+      "Generate new data with the fitted polynomial and plot it.\n",
+      "Add the noisy data to the plot.\n",
+      "\n",
+      "<span style=\"text-decoration:underline\" title=\"\n",
+      "- If you get stuck ask a demonstrator!\">Hints</span>"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def multi_plot_data(x,a,b,c):\n",
+      "    '''\n",
+      "    >>>multi_plot_data(np.linspace(1,10,100), 1, 1, 0)\n",
+      "    None\n",
+      "    '''"
      ],
      "language": "python",
      "metadata": {},
