Added poly example plots and expanded instructions for 9.4

--- a/workshop_2/scientific_python_exercises.ipynb
+++ b/workshop_2/scientific_python_exercises.ipynb
@@ -590,7 +590,7 @@
       "An example image is: <img src=files/poly.png height=400 width=400></img>\n",
       "\n",
       "<span style=\"text-decoration:underline\" title=\"\n",
-      "- Check the plotting function we used in the workshop\">Hints</span>"
+      "- Use your previous solution together with the plotting function we used in the workshop\">Hints</span>"
      ]
     },
     {
@@ -611,19 +611,32 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "9.4: multi_plot_data(x, a, b, c)\n",
+      "9.4: multi_plot_data(x, a, b, c) (optional)\n",
       "==============================\n",
       "\n",
       "Given an array of numbers x and parameters a,b,c. \n",
       "\n",
       "Generate data corresponding to f(x) = ax^2 + bx + c. \n",
-      "Add some random noise to the resulting data using noise = np.random.normal\n",
+      "\n",
+      "Add some random noise to the resulting data using [np.random.normal](http://docs.scipy.org/doc/numpy/reference/generated/numpy.random.normal.html).\n",
+      "\n",
       "Fit a polynomial to the noisy data.\n",
-      "Generate new data with the fitted polynomial and plot it.\n",
-      "Add the noisy data to the plot.\n",
+      "\n",
+      "Generate new data for the fitted polynomial.\n",
+      "\n",
+      "Plot the data for the fitted polynomial.\n",
+      "\n",
+      "Add the noisy data to the plot\n",
+      "\n",
+      "If you get in trouble try looking at the information for functions involved by using the question mark operation. E.g. execute in a cell execute 'plot?'\n",
+      "\n",
+      "An example image is:  <img src=files/poly_2.png height=400 width=400></img>\n",
+      "\n",
       "\n",
       "<span style=\"text-decoration:underline\" title=\"\n",
-      "- If you get stuck ask a demonstrator!\">Hints</span>"
+      "- If your noise is too large you will get a bad fit, if it's too small it won't be noticeable, a max noise value of about 1/30th of the largest value of f(x) seems to work pretty well.\n",
+      "- If you add the argument 'ro' to the plot function you will plot units rather than lines\n",
+      "- This is pretty advanced and requires you to look stuff you haven't covered already so don't worry if you quite manage it. If you're interested in how it works find a demonstrator.\">Hints</span>"
      ]
     },
     {
