--- a/workshop_2/scientific_python_exercises.ipynb
+++ b/workshop_2/scientific_python_exercises.ipynb
@@ -636,7 +636,7 @@
       "<span style=\"text-decoration:underline\" title=\"\n",
       "- If your noise is too large you will get a bad fit, if it's too small it won't be noticeable, a max noise value of about 1/30th of the largest value of f(x) seems to work pretty well.\n",
       "- If you add the argument 'ro' to the plot function you will plot units rather than lines\n",
-      "- This is pretty advanced and requires you to look stuff you haven't covered already so don't worry if you quite manage it. If you're interested in how it works find a demonstrator.\">Hints</span>"
+      "- This is pretty advanced and requires you to look up things you haven't covered in the workshop so don't worry if you quite manage it. If you're interested in how it works find a demonstrator.\">Hints</span>"
      ]
     },
     {
