Updated final workshop

--- a/workshop_3/advanced_python.ipynb
+++ b/workshop_3/advanced_python.ipynb
@@ -746,7 +746,24 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "We will now attempt to fit the Lennard-Jones potential to our data."
+      "As $r \\to \\infty$, $V(r)=0$ so we must subtract twise the energy of a free Ne atom so that this is true."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "energies = energies - 2*ne_energy"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "We will now attempt to fit the Lennard-Jones potential to our data. p0=(epsilon, sigma) specifies the guess for epsilon, sigma."
      ]
     },
     {
@@ -837,7 +854,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Repeat the curve fit for the Morse potential and plot both results in the cell bellow:"
+      "Repeat the curve fit for the Morse potential and plot both results in the cell bellow (use r_e=2.3, d=0.0018, a=14) as an intial guess for the fitting function:"
      ]
     },
     {
@@ -852,7 +869,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "if d_opt ==2.29433482842 and d_opt == -0.00177961196379 and a_opt == 14.9232811053:\n",
+      "if r_e_opt ==2.29433482842 and d_opt == -0.00177961196379 and a_opt == 14.9232811053:\n",
       "    print('Well Done you have finished the mini project in the final workshop!')\n",
       "else:\n",
       "    print('Check the curve fit calculation for the Morse potential')"
