More clues for final project.

--- a/workshop_3/final_project.ipynb
+++ b/workshop_3/final_project.ipynb
@@ -46,7 +46,17 @@
       "1. No marks will be given for any explanation of the chemistry (so you don't need to worry about this).\n",
       "2. Use the curve fitting example from workshop 3 - note the data files have a slightly different format to those in workshop 3:\n",
       "3. Exclude points you feel are irrelavent (the Lennard-Jones potentail sometimes fails to desacribe short range behavior accuratly)\n",
-      "4. Try and write comments to make your code clearer (either in the code itself using # or by adding Raw text cells)"
+      "4. Try and write comments to make your code clearer (either in the code itself using # or by adding Raw text cells)\n",
+      "5. Use the lowest energy point for each curve as a guess for the minima, to find a guess for epsilion and sigma for the fitting function.\n",
+      "6. The data for each dimer is in a file like final_project_data/Ne2.out, final_project_data/He2.out ... and the data for each single point is in a file like final_project_data/Ne.out, final_project_data/He.out\n",
+      "7. The energy is given in a line like (for each point):"
+     ]
+    },
+    {
+     "cell_type": "raw",
+     "metadata": {},
+     "source": [
+      "Total Energy              =    -257.3508759806243802 [H]"
      ]
     },
     {
@@ -60,7 +70,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "#He Dissociation curve:\n"
+      "#He Dissociation curve:"
      ],
      "language": "python",
      "metadata": {},
@@ -154,15 +164,12 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "def extract_energies(data_file):  \n",
+      "#extract the energy from a file containing a single atom's energy\n",
+      "def extract_energy(data_file):  \n",
       "    '''\n",
-      "    >>> extract_energy('He2.out')\n",
+      "    >>> extract_energy('final_project_data/He2.out')\n",
       "    [-257.35961064714644, -257.3602203016917, -257.3606695111796, -257.3609925808868, -257.36121774835453, -257.3613681862958, -257.36146276795836, -257.3615166804277, -257.3615419463744, -257.3615478902172, -257.36154156629686, -257.36149354664656, -257.36147640080674, -257.361460788562, -257.361447142686, -257.3614355791732, -257.3614260155646, -257.36141825755266, -257.36141205999513, -257.3614071664569]\n",
-      "    >>> extract_energy('He2.out')\n",
-      "    [-257.35961064714644, -257.3602203016917, -257.3606695111796, -257.3609925808868, -257.36121774835453, -257.3613681862958, -257.36146276795836, -257.3615166804277, -257.3615419463744, -257.3615478902172, -257.36154156629686, -257.36149354664656, -257.36147640080674, -257.361460788562, -257.361447142686, -257.3614355791732, -257.3614260155646, -257.36141825755266, -257.36141205999513, -257.3614071664569]\n",
-      "    >>> extract_energy('He2.out')\n",
-      "    [-257.35961064714644, -257.3602203016917, -257.3606695111796, -257.3609925808868, -257.36121774835453, -257.3613681862958, -257.36146276795836, -257.3615166804277, -257.3615419463744, -257.3615478902172, -257.36154156629686, -257.36149354664656, -257.36147640080674, -257.361460788562, -257.361447142686, -257.3614355791732, -257.3614260155646, -257.36141825755266, -257.36141205999513, -257.3614071664569]\n",
-      "    '''"
+      "   '''"
      ],
      "language": "python",
      "metadata": {},
@@ -172,15 +179,27 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "#extract the energy from a file containing multiple dimer energies\n",
+      "def extract_energies(data_file):  \n",
+      "    '''\n",
+      "    >>> extract_energy('final_project_data/He2.out')\n",
+      "    [-257.35961064714644, -257.3602203016917, -257.3606695111796, -257.3609925808868, -257.36121774835453, -257.3613681862958, -257.36146276795836, -257.3615166804277, -257.3615419463744, -257.3615478902172, -257.36154156629686, -257.36149354664656, -257.36147640080674, -257.361460788562, -257.361447142686, -257.3614355791732, -257.3614260155646, -257.36141825755266, -257.36141205999513, -257.3614071664569]\n",
+      "   '''"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "#extract the distances from a file containing multiple dimers\n",
       "def extract_distances(data_file):\n",
       "    '''\n",
-      "    >>> extract_distances('He2.out')\n",
+      "    >>> extract_distances('final_project_data/He2.out')\n",
       "    [-257.35961064714644, -257.3602203016917, -257.3606695111796, -257.3609925808868, -257.36121774835453, -257.3613681862958, -257.36146276795836, -257.3615166804277, -257.3615419463744, -257.3615478902172, -257.36154156629686, -257.36149354664656, -257.36147640080674, -257.361460788562, -257.361447142686, -257.3614355791732, -257.3614260155646, -257.36141825755266, -257.36141205999513, -257.3614071664569]\n",
-      "    >>> extract_distances('He2.out')\n",
-      "    [-257.35961064714644, -257.3602203016917, -257.3606695111796, -257.3609925808868, -257.36121774835453, -257.3613681862958, -257.36146276795836, -257.3615166804277, -257.3615419463744, -257.3615478902172, -257.36154156629686, -257.36149354664656, -257.36147640080674, -257.361460788562, -257.361447142686, -257.3614355791732, -257.3614260155646, -257.36141825755266, -257.36141205999513, -257.3614071664569]\n",
-      "    >>> extract_distances('He2.out')\n",
-      "    [-257.35961064714644, -257.3602203016917, -257.3606695111796, -257.3609925808868, -257.36121774835453, -257.3613681862958, -257.36146276795836, -257.3615166804277, -257.3615419463744, -257.3615478902172, -257.36154156629686, -257.36149354664656, -257.36147640080674, -257.361460788562, -257.361447142686, -257.3614355791732, -257.3614260155646, -257.36141825755266, -257.36141205999513, -257.3614071664569]\n",
-      "    '''"
+      "     '''"
      ],
      "language": "python",
      "metadata": {},
@@ -193,7 +212,6 @@
       "def fit_lennard(energies, distances):\n",
       "    '''\n",
       "    >>> fit_lennard()\n",
-      "    \n",
       "    '''"
      ],
      "language": "python",
@@ -206,7 +224,7 @@
      "input": [
       "def eq_bond_length(sigma):\n",
       "    '''\n",
-      "    >>> dis_energy(0.123)\n",
+      "    >>> eq_bond_length(0.123)\n",
       "    12312\n",
       "    '''"
      ],
