Hacked He2.out so that it is easy to grep out data

--- a/workshop_3/advanced_python.ipynb
+++ b/workshop_3/advanced_python.ipynb
@@ -47,6 +47,29 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "The function bellow is used latter to check your results are within a tolerance."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def check_float(float_number, exact_answer):\n",
+      "    tol = 1e-14\n",
+      "    if abs(float_number - exact_answer) > tol:\n",
+      "        return False\n",
+      "    else:\n",
+      "        return True"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 1
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
       "## Least squares fitting\n",
       "Very often we deal with some data that we want to fit to some sort of expected behaviour. Say we have the following:"
      ]
