Added test function for floating point precision.

--- a/workshop_3/advanced_python.ipynb
+++ b/workshop_3/advanced_python.ipynb
@@ -626,7 +626,13 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "if(dist == [2.2999999999999998, 2.3500000000000001, 2.3999999999999999, 2.4500000000000002, 2.5, 2.5499999999999998, 2.6000000000000001, 2.6499999999999999, 2.7000000000000002, 2.75, 2.7999999999999998, 2.9500000000000002, 3.0, 3.0499999999999998, 3.1000000000000001, 3.1499999999999999, 3.2000000000000002, 3.25, 3.2999999999999998, 3.3500000000000001]):\n",
+      "correct_answer = [2.3, 2.35, 2.40, 2.45, 2.5, 2.55, 2.60, 2.65, 2.70, 2.75, 2.80, 2.85, 2.95, 3.00, 3.05 , 3.10, 3.15, 3.20, 3.25, 3.35]\n",
+      "correct = True\n",
+      "for i,d in enumerate(dist):\n",
+      "    if not check_float(d, correct_answer[i]):\n",
+      "        correct = False\n",
+      "\n",
+      "if correct:\n",
       "    print('Success')\n",
       "else:\n",
       "    print(\"The lists don't match, check your above solutions.\")"
@@ -666,11 +672,24 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "if(energies == [-257.35961064714644, -257.3602203016917, -257.3606695111796, -257.3609925808868, -257.36121774835453, -257.3613681862958, -257.36146276795836, -257.3615166804277, -257.3615419463744, -257.3615478902172, -257.36154156629686, -257.36149354664656, -257.36147640080674, -257.361460788562, -257.361447142686, -257.3614355791732, -257.3614260155646, -257.36141825755266, -257.36141205999513, -257.3614071664569]):\n",
+      "correct_answer = [-257.35961064714644, -257.3602203016917, -257.3606695111796, -257.3609925808868, -257.36121774835453, -257.3613681862958, -257.36146276795836, -257.3615166804277, -257.3615419463744, -257.3615478902172, -257.36154156629686, -257.36149354664656, -257.36147640080674, -257.361460788562, -257.361447142686, -257.3614355791732, -257.3614260155646, -257.36141825755266, -257.36141205999513, -257.3614071664569]):\n",
+      "correct = True\n",
+      "for i,d in enumerate(dist):\n",
+      "    if not check_float(d, correct_answer[i]):\n",
+      "        correct = False\n",
+      "\n",
+      "if correct:\n",
       "    print('Success')\n",
       "else:\n",
       "    print(\"The lists don't match, check your above solutions.\")\n",
-      "if(dist == [2.2999999999999998, 2.3500000000000001, 2.3999999999999999, 2.4500000000000002, 2.5, 2.5499999999999998, 2.6000000000000001, 2.6499999999999999, 2.7000000000000002, 2.75, 2.7999999999999998, 2.9500000000000002, 3.0, 3.0499999999999998, 3.1000000000000001, 3.1499999999999999, 3.2000000000000002, 3.25, 3.2999999999999998, 3.3500000000000001]):\n",
+      "\n",
+      "correct_answer = [2.3, 2.35, 2.40, 2.45, 2.5, 2.55, 2.60, 2.65, 2.70, 2.75, 2.80, 2.85, 2.95, 3.00, 3.05 , 3.10, 3.15, 3.20, 3.25, 3.35]\n",
+      "\n",
+      "for i,d in enumerate(dist):\n",
+      "    if not check_float(d, correct_answer[i]):\n",
+      "        correct = False\n",
+      "\n",
+      "if correct:\n",
       "    print('Success')\n",
       "else:\n",
       "    print(\"The lists don't match, check your above solutions.\")"
@@ -843,7 +862,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "if morse(2.0, 1.0, 3.2, 5.2) == -0.035208628347242053:\n",
+      "if check_float(morse(2.0, 1.0, 3.2, 5.2) , -0.035208628347242053 ):\n",
       "    print('Well Done your Morse function works.')\n",
       "else:\n",
       "    print('Your Morse function is wrong!')"
@@ -892,7 +911,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "if r_e_opt ==2.29433482842 and d_opt == -0.00177961196379 and a_opt == 14.9232811053:\n",
+      "if check_float(r_e_opt, 2.29433482842) and check_float(d_opt, -0.00177961196379) and check_float(a_opt, 14.9232811053):\n",
       "    print('Well Done you have finished the mini project in the final workshop!')\n",
       "else:\n",
       "    print('Check the curve fit calculation for the Morse potential')"
