Fixes for advanced python workshop.
Tollerence function now works properly.

--- a/workshop_3/advanced_python.ipynb
+++ b/workshop_3/advanced_python.ipynb
@@ -55,7 +55,7 @@
      "collapsed": false,
      "input": [
       "def check_float(float_number, exact_answer):\n",
-      "    tol = 1e-14\n",
+      "    tol = 1e-8\n",
       "    if abs(float_number - exact_answer) > tol:\n",
       "        return False\n",
       "    else:\n",
@@ -626,7 +626,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "correct_answer = [2.3, 2.35, 2.40, 2.45, 2.5, 2.55, 2.60, 2.65, 2.70, 2.75, 2.80, 2.85, 2.95, 3.00, 3.05 , 3.10, 3.15, 3.20, 3.25, 3.35]\n",
+      "correct_answer = [2.3, 2.35, 2.40, 2.45, 2.5, 2.55, 2.60, 2.65, 2.70, 2.75, 2.80, 2.95, 3.00, 3.05 , 3.10, 3.15, 3.20, 3.25, 3.3, 3.35]\n",
       "correct = True\n",
       "for i,d in enumerate(dist):\n",
       "    if not check_float(d, correct_answer[i]):\n",
@@ -672,9 +672,9 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "correct_answer = [-257.35961064714644, -257.3602203016917, -257.3606695111796, -257.3609925808868, -257.36121774835453, -257.3613681862958, -257.36146276795836, -257.3615166804277, -257.3615419463744, -257.3615478902172, -257.36154156629686, -257.36149354664656, -257.36147640080674, -257.361460788562, -257.361447142686, -257.3614355791732, -257.3614260155646, -257.36141825755266, -257.36141205999513, -257.3614071664569]):\n",
+      "correct_answer = [-257.35961064714644, -257.3602203016917, -257.3606695111796, -257.3609925808868, -257.36121774835453, -257.3613681862958, -257.36146276795836, -257.3615166804277, -257.3615419463744, -257.3615478902172, -257.36154156629686, -257.36149354664656, -257.36147640080674, -257.361460788562, -257.361447142686, -257.3614355791732, -257.3614260155646, -257.36141825755266, -257.36141205999513, -257.3614071664569]\n",
       "correct = True\n",
-      "for i,d in enumerate(dist):\n",
+      "for i,d in enumerate(energies):\n",
       "    if not check_float(d, correct_answer[i]):\n",
       "        correct = False\n",
       "\n",
@@ -683,8 +683,9 @@
       "else:\n",
       "    print(\"The lists don't match, check your above solutions.\")\n",
       "\n",
-      "correct_answer = [2.3, 2.35, 2.40, 2.45, 2.5, 2.55, 2.60, 2.65, 2.70, 2.75, 2.80, 2.85, 2.95, 3.00, 3.05 , 3.10, 3.15, 3.20, 3.25, 3.35]\n",
+      "correct_answer = [2.3, 2.35, 2.40, 2.45, 2.5, 2.55, 2.60, 2.65, 2.70, 2.75, 2.80, 2.95, 3.00, 3.05 , 3.10, 3.15, 3.20, 3.25, 3.3, 3.35]\n",
       "\n",
+      "correct = True\n",
       "for i,d in enumerate(dist):\n",
       "    if not check_float(d, correct_answer[i]):\n",
       "        correct = False\n",
@@ -840,7 +841,7 @@
       "V(r) = d ((1 - e^{-a(r - r_e)})^2 - 1)\n",
       "\\end{equation}\n",
       "\n",
-      "Write a function to compute the Morse potential with r, r_e, d and a as arguments to the function. Making sure the arguments are in the order r, r_e, d and call the function morse."
+      "Write a function to compute the Morse potential with r, r_e, d and a as arguments to the function. Making sure the arguments are in the order r, r_e, d, a and call the function morse."
      ]
     },
     {
@@ -911,7 +912,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "if check_float(r_e_opt, 2.29433482842) and check_float(d_opt, -0.00177961196379) and check_float(a_opt, 14.9232811053):\n",
+      "if check_float(r_e_opt, 2.29433487861) and check_float(d_opt, -0.00177961173998) and check_float(a_opt, 14.9232881311):\n",
       "    print('Well Done you have finished the mini project in the final workshop!')\n",
       "else:\n",
       "    print('Check the curve fit calculation for the Morse potential')"
